# datakura

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  LICENSE  README.md  datakura.code-workspace  debug.py  docker-compose.yml  failed-tasks.txt  justfile  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: checks.yml
apps/warehouse/: apps.py  tests.py  urls.py
apps/warehouse/admin/: __init__.py
apps/warehouse/api/: __init__.py  app.py  pagination.py  schemas.py
apps/warehouse/core/: audit_messages.py  auth.py  exceptions.py  packaging.py  transformation.py  warehouse.py  zebra_printer.py
apps/warehouse/migrations/: 0001_initial.py  0002_alter_warehousemovement_location_from_and_more.py  0003_alter_warehouseitem_amount.py  (+93 more)
conf/: README.md  asgi.py  context_processors.py  urls.py  views.py  wsgi.py
conf/settings/: base.py  devel.py
conf/templates/: index.html  pdf_base.html
docs/: 2026-03-12_meetin-notes.md  2026-05-25_identifiedbugs.md  2026-06-04_core_assesment.md  2026-06-18_meeting-notes.md  2026-07-07_oberbank  Ceny.md  Objednavka.md  Prijem.md  Sklady.md
docs/specs/: 001-movement  002-round-of-bugfixes.md
e2e-isolated/: .env.example  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e-isolated/tests/: auth.spec.ts  helpers.ts  orders.spec.ts
frontend/: README.md  eslint.config.ts  index.html  openapi-ts.config.ts  package-lock.json  package.json  unocss.config.ts  vite.config.ts
frontend/e2e/: vue.spec.ts
frontend/src/: App.vue  main.ts  quasar-variables.scss
(+418 files in other folders)
